# amalfi

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
amalfi/: README.md  pyproject.toml
amalfi/amalfi/: __init__.py  core.py  pipeline.py  stream.py
amalfi/amalfi/ops/: __init__.py  collect.py  filter.py  map.py  reduce.py  starmap.py  tap.py
amalfi/amalfi/stream/: __init__.py  astream.py  stream.py
amalfi/amalfi/test/: test_pi.py
amalfi/test/: spec_astream.py  spec_core.py  spec_ops.py  spec_pipe.py  spec_pipeline.py  spec_stream.py  stub.py
amalfi/test/ops/: spec_collect.py  spec_filter.py  spec_map.py  spec_ops.py  spec_reduce.py  spec_starmap.py  spec_tap.py
amalfi_core/: README.md  pyproject.toml
amalfi_core/amalfi_core/: __init__.py  pipeline.py
amalfi_core/test/: spec_pi.py  spec_pipeline.py
examples/: pipelines.py  pyproject.toml  stubs.py
examples/etl/: etl_pipe_users_and_activities.py  etl_stream_users_and_activities.py  etl_users_and_activities.py
examples/streams/: __init__.py
examples/test/: e2e_math.py
