[tool.poetry]
name = "amalfi"
version = "0.1.0"
description = "Simple functional programming in modern python"
authors = ["Carlo Casorzo <carlo@deepblu.dev>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "amalfi" }]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
